added styles & buttons

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,14 @@
 // Define variables for your color scheme
+$off-white: #FFFFF9;
+$dark-gray: #272727;
+$purple: #6C27FF;
+$green: #00D9B2;
+$lilac: #E5CCE8;
 
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
