--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,12 @@
 .avatar {
-  width: 40px;
+  width: 50px;
   border-radius: 50%;
+  border: rgb(0, 0, 0) 1px solid;
 }
 .avatar-large {
-  width: 56px;
+  width: 225px;
   border-radius: 50%;
+  border: rgb(0, 0, 0) 1px solid;
 }
 .avatar-bordered {
   width: 40px;
