--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,34 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<div class="center">
+  <div class="main-avatar">
+    <div>
+      <%= link_to chatrooms_path do %>
+      <img class="avatar-large" src="https://ca.slack-edge.com/T02NE0241-U045M36JRJP-9f2b62fd8ed7-512" alt="">
+      <% end %>
+    </div>
+  </div>
+
+  <div class="friend-avatar flex-container">
+    <div>
+      <%= link_to chatrooms_path do %>
+      <img class="avatar flex-item" src="https://ca.slack-edge.com/T02NE0241-U045BG2543X-c901dae64dd9-512" alt="">
+      <% end %>
+    </div>
+    <div>
+      <%= link_to chatrooms_path do %>
+      <img class="avatar flex-item" src="https://ca.slack-edge.com/T02NE0241-U045DF4MG86-193c0afdd00a-512" alt="">
+      <% end %>
+    </div>
+    <div>
+      <%= link_to chatrooms_path do %>
+      <img class="avatar flex-item" src="https://ca.slack-edge.com/T02NE0241-UKQMSQ22E-fcbfe66ea66b-512" alt="">
+      <% end %>
+    </div>
+    <div>
+      <%= link_to chatrooms_path do %>
+      <img class="avatar flex-item" src="https://ca.slack-edge.com/T02NE0241-U01K1K91588-4a6bc04f4618-512" alt="">
+      <% end %>
+    </div>
+  </div>
+</div>
