--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,6 +1,6 @@
-
 <h3>My friends</h3>
-
+<div class="container">
 <% @friends.each do |friend| %>
-<li><%= friend.name %></li>
+<li><%= friend.user.first_name %></li>
 <% end %>
+</div>
