--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,8 +1,9 @@
 .avatar {
-  width: 50px;
+  width: 4rem;
   border-radius: 50%;
   border: rgb(0, 0, 0) 1px solid;
-  margin: 10px;
+  margin: 1rem;
+  
 }
 .avatar-large {
   width: 225px;
