--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-  
+
     <%= f.input :first_name,
                 required: true,
                 autofocus: true,
@@ -17,6 +17,10 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "phone number" }%>
+    <%= f.input :address,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "address" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
