--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,4 +1,5 @@
-<div style="width: 100%; height: 600px;"
+<div style="width: 100%; height: 70vh;"
   data-controller="map"
-  data-map-markers-value="<%= @marker.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
