--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,8 +6,7 @@
     </div>
     <a href="#" class="button-purple">HELP</a>
     <div>
-    <a href="#" class="icon-link"></a>
-
+    <a href="/map" class="icon-link">MAP</a>
     <p>MAP</p>
     </div>
   </div>
