--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,6 +1,6 @@
 <h1>Friends</h1>
 <div class="container">
-<h3>Search bar can go here or whatever</h3>
+<h3>search for friend by phone number</h3>
 <%= form_with url: find_friends_path, method: :get, class: "d-flex pb-3" do %>
   <%= text_field_tag :query,
     params[:query],
