add friends link to footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-links">
     <div class="icon-link">
-    <a href="#" class="icon-link"><i class="fa-regular fa-address-book"></i></a>
+    <a href=<%= friends_path %> class="icon-link"><i class="fa-regular fa-address-book"></i></a>
     <p>FRIENDS</p>
     </div>
     <a href="#" class="button-purple">HELP</a>
