Add user location

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center" data-controller="activation-button">
+<div class="center" data-controller="activation-button user-location">
   <div class="main-avatar">
     <div class="activate" data-action="click->activation-button#change">
 
