started avatars and styling

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -14,7 +14,7 @@ $body-color: $dark-gray;
 $primary:    $blue;
 $success:    $green;
 $info:       $lilac;
-$danger:     $red;
+$danger:     $purple;
 $warning:    $orange;
 
 // Buttons & inputs' radius
