--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -14,6 +14,7 @@
   justify-content: space-between;
   width: 100vw;
   text-align: center;
+  padding-left: 10px;
 }
 .footer-links a {
   color: $dark-gray;
