--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,6 +10,21 @@
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
+
+  a {
+    text-decoration: none;
+  }
 }
 
+.username {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
 
+.image {
+  width: 60px;
+  margin: 0px 10px;
+  border: 1px solid black;
+}
