--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 .flex-container {
@@ -19,7 +20,7 @@
 .username {
   text-align: center;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 400;
   padding-bottom: 20px;
 }
 
@@ -27,4 +28,10 @@
   width: 60px;
   margin: 0px 10px;
   border: 1px solid black;
+}
+
+.test {
+  width: 260px;
+  height: 265px;
+  object-fit: cover;
 }
