debugged a class issue

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -4,7 +4,7 @@
   border: rgb(0, 0, 0) 1px solid;
   margin: 5px;
 }
-.avatar-large {
+.rounded-circle {
   width: 250px;
   border-radius: 50%;
   border: red 8px solid;
