--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -20,7 +20,7 @@
   </div>
   <% end %>
 
-  <div class="add d-flex justify-content-center">
+  <div class="add d-flex justify-content-left">
   <%= link_to "ADD A FRIEND", find_friends_path, class: "button-green-shadow" %>
   </div>
 </div>
