--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -21,6 +21,7 @@
     <div class="small-details">
       <p>EMAIL <span style="color: #6C27FF"><%= @user.email.upcase%></span></p>
       <p>PHONE NUMBER <span style="color: #6C27FF"><%= @user.phone_number %></span></p>
+      <p>HOME ADDRESS <span style="color: #6C27FF"><%= @user.address %></span></p>
     </div>
 
   </div>
