--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "login";
-@import "findfriends";
+@import "myfriends";
 @import "profile";
+@import "findfriends";
