--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,17 +1,23 @@
-<h1>Friends</h1>
 <div class="container">
-<h3>search for friend by phone number</h3>
+<h3>FRIENDS</h3>
+<div class="middle">
+<p>Search for a friend by phone number</p>
 <%= form_with url: find_friends_path, method: :get, class: "d-flex pb-3" do %>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
     placeholder: "Find a friend"
   %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
+  <%= submit_tag "Search", class: "btn btn-primary send" %>
+<% end %>
+
+
+<div class="users">
+<% @users.each do |user| %>
+  <div class="names">
+  <%= link_to user.first_name.upcase, friends_path(user: user.id), data: { turbo_method: :post } %>
+  </div>
 <% end %>
 </div>
-
-<% @users.each do |user| %>
-  <%= user.first_name %>
-  <%= link_to "add as friend", friends_path(user: user.id), data: { turbo_method: :post } %>
-<% end %>
+</div>
+</div>
