--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
     <div class="activate" data-action="click->activation-button#change">
 
       <% if current_user.photo.attached? %>
-        <%= cl_image_tag current_user.photo.key, class: "test rounded-circle", data: { activation_button_target: "image" }%>
+        <%= cl_image_tag current_user.photo.key, class: "picture rounded-circle", data: { activation_button_target: "image" }%>
         <% else %>
-        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "rounded-circle", data: { activation_button_target: "image" } %>
+        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "picture rounded-circle", data: { activation_button_target: "image" } %>
       <% end %>
 
 
