--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,13 +22,14 @@
   text-align: center;
   font-size: 25px;
   font-weight: 400;
-  color: #E5CCE8;
+  color: black;
 }
 
 .image {
   width: 60px;
   margin: 0px 10px;
   border: 1px solid black;
+  opacity: 1;
 }
 
 .picture {
