--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $off-white;
+  background: $light-gray;
   display: flex;
   align-items: center;
   justify-content: space-between;
