--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,21 +14,21 @@
 
 
     <div class="" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <div class="me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item dropdown">
+          <div class="nav-item dropdown">
             <a class="nav-link" href="#" data-bs-toggle="dropdown"><%= current_user.first_name.upcase %></a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My profile", my_profile_path, class: "dropdown-item" %>
                 <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item"%>
               </div>
-          </li>
+          </div>
         <% else %>
           <li class="nav-item">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
-      </ul>
+      </div>
     </div>
   </div>
 </div>
