--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,3 +16,15 @@
   text-decoration: none;
   color: #6C27FF;
 }
+
+.text {
+  display: flex;
+
+  p {
+    margin: 0;
+    padding-left: 10px;
+    padding-top: 15px;
+    font-size: 15px;
+    color: $purple;
+  }
+}
