--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -15,6 +15,8 @@
   width: 100vw;
   text-align: center;
   padding-left: 10px;
+  padding-right: 10px;
+  font-size: 19px;
 }
 .footer-links a {
   color: $dark-gray;
