--- a/app/assets/stylesheets/pages/myprofile.scss
+++ b/app/assets/stylesheets/pages/myprofile.scss
@@ -8,11 +8,25 @@
   font-size: 20px;
 }
 .small-details-profile {
-  padding-top: 20px;
+  padding-top: 50px;
 }
 
 .small-details-profile p {
   padding: 5px 0px;
   text-align: center;
-  justify-content: left;
+  margin: 0 auto;
+  width: 80%;
+}
+
+
+.profile-link {
+  margin-top: 10px;
+  text-decoration: none;
+  position: absolute;
+      top: 62%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 20px;
 }
