--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div class="signup">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo:false}, html: { method: :put }) do |f| %>
@@ -29,7 +31,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", class:"button-green-shadow mb-2" %>
   </div>
 <% end %>
 
@@ -37,7 +39,9 @@
 
 <div class="d-flex align-items-center">
   <div>Unhappy?</div>
-  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-link" %>
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button-green-shadow mx-3" %>
 </div>
 
-<%= link_to "Back", :back %>
+
+</div>
+</div>
