--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
     <a href="#" class="button-purple">HELP</a>
     <div class="icon-link">
     <a href="/map" class="icon-link"><i class="fa-regular fa-map"></i></a>
-    <p>MAP</p>
+    <p>LOCATION</p>
     </div>
   </div>
 </div>
