--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="main-avatar">
     <div class="activate" data-action="click->activation-button#change">
 
-      <img class="avatar-large" data-activation-button-target="image" src="https://ca.slack-edge.com/T02NE0241-U045M36JRJP-9f2b62fd8ed7-512" alt="">
+      <img class="avatar-large" style="z-index: 1000;" data-activation-button-target="image" src="https://ca.slack-edge.com/T02NE0241-U045M36JRJP-9f2b62fd8ed7-512" alt="">
 
     </div>
   </div>
@@ -23,9 +23,6 @@
 <%= link_to friend.user.first_name, chatroom_path(friend.chatroom) %>
 <% end %>
   </div>
-
-
-
-
-
 </div>
+
+<%= render "map" %>
