--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -6,7 +6,7 @@
         <% else %>
         <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "rounded-circle img" %>
       <% end %>
-  <div>
+  <div class="pt-2">
     <%= link_to "Edit my profile", edit_user_registration_path, class:"profile-link button-green-shadow"%>
   </div>
     <div class="small-details-profile">
