--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,11 @@
           <div class="nav-item dropdown">
             <a class="nav-link" href="#" data-bs-toggle="dropdown">
 
-            <%= image_tag "logo-ghs.png", :style => "width:80px" %>
+             <% if current_user.photo.attached? %>
+        <%= cl_image_tag current_user.photo.key, class: "rounded-circle profilepic", data: { activation_button_target: "image" }%>
+        <% else %>
+        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "rounded-circle profilepic", data: { activation_button_target: "image" } %>
+      <% end %>
             </a>
 
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
