--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-<h3>MY LOCATION</h3>
+<h3>SAFE LOCATIONS</h3>
 </div>
-<div style="width: 100%; height: 70vh;"
+<div style="width: 100%; height: 80vh;"
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
