--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,3 +43,12 @@
   height: 275px;
   object-fit: cover;
 }
+
+.map-modal {
+  width: 100vw;
+  height: 250px;
+}
+
+.icon-modal {
+  font-size: 3rem;
+}
