--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,4 +38,12 @@
   </div>
 </div>
 
-<%= render "map" %>
+<div data-controller="modal" style="width: 100vw;">
+  <div class="icon-link icon-modal w-25 m-auto text-center"  data-action="click->modal#show" data-modal-target="icon">
+    <i class="fa-regular fa-map m-auto"></i>
+  </div>
+
+  <%# <div class="d-none" data-modal-target="map"> %>
+    <%= render "map" %>
+  <%# </div> %>
+</div>
