--- a/app/views/pages/_map.html.erb
+++ b/app/views/pages/_map.html.erb
@@ -1,5 +1,7 @@
-  <div style="width: 100%; height: 70vh;"
+  <div style="width: 100vw; height: 70vh;"
     data-controller="map"
+    data-modal-target="map"
+    class="d-none"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>" id="my-map">
   </div>
