--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3>FRIENDS</h3>
+<h3 class="pt-2">FRIENDS</h3>
 <div class="middle">
 <p>Search for a friend by phone number</p>
 <%= form_with url: find_friends_path, method: :get, class: "d-flex pb-3" do %>
