--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3 class="pb-2">MY FRIENDS</h3>
+<h3 class="pb-2 pt-3">MY FRIENDS</h3>
       <% @friends.each do |friend| %>
 <div class="cards">
   <div class="card-product">
