--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,3 +41,12 @@
       box-shadow: 0.313rem 0.313rem 0 $dark-gray;
     }
 }
+
+
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
