help-button color changed

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
     <a href=<%= friends_path %> class="icon-link"><i class="fa-regular fa-address-book"></i></a>
 
     </div>
-    <a href="#" class="button-purple">HELP</a>
+    <a href="#" id="help-button" class="button-purple">HELP</a>
     <div class="icon-link">
     <a href="/map" class="icon-link"><i class="fa-regular fa-map"></i></a>
     </div>
