--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-<h3 class="pt-2">FRIENDS</h3>
+<h3 class="pt-3">FRIENDS</h3>
 <div class="middle">
-<p>Search for a friend by phone number</p>
+<p>Search for a contact by phone number</p>
 <%= form_with url: find_friends_path, method: :get, class: "d-flex pb-3" do %>
   <%= text_field_tag :query,
     params[:query],
@@ -15,6 +15,7 @@
 <div class="users">
 <% @users.each do |user| %>
   <div class="names">
+  
   <%= link_to user.first_name.upcase, friends_path(user: user.id), data: { turbo_method: :post } %>
   </div>
 <% end %>
