--- a/app/views/pages/_map.html.erb
+++ b/app/views/pages/_map.html.erb
@@ -1,10 +1,8 @@
-
-<div style="width: 100vw; height: 90vh; "
+<h6 class="text-center"></h6>
+<div style="width: 100%; height: 89vh;"
     data-controller="map"
     data-modal-target="map"
     class="d-none"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>" id="my-map">
   </div>
-
-
