--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,7 +58,7 @@
   .mapboxgl-canvas {
     // width: 100vw !important;
     // height: 90vh !important;
-    // padding-bottom: 90px !important;
+    padding-bottom: 90px !important;
     // object-fit: cover;
   }
 }
