add useful locations to map

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 $off-white: #FFFFF9;
 $dark-gray: #272727;
-$purple: #6C27FF;
+$purple: #6c27ff;
 $green: #00D9B2;
 $lilac: #E5CCE8;
 
