friends logic fixed

--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,5 +1,7 @@
+<div class="container px-0">
+<h3 class="pt-2 text-center mb-0 pb-0 ">FRIENDS</h3>
+</div>
 <div class="container">
-<h3 class="pt-3">FRIENDS</h3>
 <div class="middle">
 <p>Search for a contact by phone number</p>
 <p class="text-info">Never add a contact you don't know or trust</p>
@@ -27,4 +29,5 @@
   <p class="button-green-shadow">INVITE A FRIEND</p>
   </div>
   </div>
+</div>
 </div>
