--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
-<h3 class="pb-2 pt-3">MY FRIENDS</h3>
+<div class="container px-0">
+<h3 class="pt-2 text-center mb-0 pb-0 ">MY FRIENDS</h3>
       <% @friends.each do |friend| %>
+      </div>
+      <div class="container">
 <div class="cards">
   <div class="card-product">
     <% if friend.user.id == current_user.id %>
@@ -20,7 +22,7 @@
   </div>
   <% end %>
 
-  <div class="add d-flex justify-content-center">
+  <div class="add d-flex justify-content-center container">
   <%= link_to "ADD A FRIEND", find_friends_path, class: "button-green-shadow" %>
   </div>
 </div>
