--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     <% user_friend = UserFriend.find_by(user_id: current_user.id, friend_id: Friend.find_by(user_id: @user.id).id) %>
-    <div class="pt-3">
+    <div class="remove">
    <i class="fa-solid fa-trash"></i> <%= link_to "Remove friend", unfriend_path(id: user_friend.id), data: {turbo_confirm: "Are you sure?"} %>
    </div>
   </div>
