friends logic again

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div data-controller="modal" style="width: 100vw">
+<div data-controller="modal" style="width: 100vw; padding-top: 20px">
   <div class="icon-link icon-modal w-25 m-auto text-center"  data-action="click->modal#show" data-modal-target="icon">
     <i class="fa-regular fa-map m-auto"></i>
   </div>
