--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3 class="pt-2 text-center mb-0 pb-0">SAFE LOCATIONS</h3>
+<h3 class="pt-2 text-center mb-0 pb-0">HOME</h3>
 </div>
 <div style="width: 100%; height: 80vh;"
   data-controller="map"
