--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -24,8 +24,8 @@
 </div>
 </div>
 
-  <div class="add d-flex justify-content-left">
-  <div><p>Can't find who you want?</p>
+  <div class="add d-flex justify-content-center">
+  <div class="d-flex justify-content-center"><p class="pt-1 px-2 m-0 d-flex justify-content-center">Can't find who you want? </p>
   <p class="button-green-shadow">INVITE A FRIEND</p>
   </div>
   </div>
