--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -8,10 +8,11 @@
   text-align: center;
   font-family: $body-font;
   background-color: $off-white;
+  width: 50vw;
+
     h2 {
       color: $purple;
       font-size: 1rem;
-      border: 2px solid $purple;
       margin-top: 1rem;
       padding: 0.5rem;
     }
