--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -71,6 +71,11 @@
 }
 
 .user-img-map {
-  width: 80%;
+  width: 70%;
   object-fit: cover;
+}
+
+#house {
+  color: $purple;
+  font-style: italic;
 }
