--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,7 @@
 
 <div data-controller="modal" style="width: 100vw; padding-top: 20px">
   <div class="icon-link icon-modal w-25 m-auto text-center"  data-action="click->modal#show" data-modal-target="icon">
-    <i class="fa-regular fa-map m-auto"></i>
+    <i class="fa-solid fa-location-dot"></i>
   </div>
 
   <%# <div class="d-none" data-modal-target="map"> %>
