--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <a href=<%= friends_path %> class="icon-link"><i class="fa-regular fa-address-book"></i></a>
     </div>
     <div data-controller="help-button">
-      <button type="button" class="btn btn-danger button-purple" data-action="click->help-button#help">HELP</button>
+      <button type="button" class="helpbutton" data-action="click->help-button#help">HELP</button>
     </div>
     <div class="icon-link">
       <a href="/map" class="icon-link"><i class="fa-regular fa-map"></i></a>
