--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -16,7 +16,7 @@
   }
 
   #message_content {
-    background-color: white;
+    background-color: $off-white;
   }
 
   .messages {
@@ -29,6 +29,7 @@
   #new_message {
     border-top: 1px solid $gray-200;
     padding: 1rem;
+
 
     .form-group {
       margin-bottom: 0;
