--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -13,7 +13,7 @@
 }
 
 .sender-style {
-  background-color: #FFFFFF;
+  background-color: rgba(0, 217, 178, .6);
   border: 1px solid black;
 }
 
@@ -29,4 +29,12 @@
   &:hover {
     background-color: rgb(187, 113, 187);
   }
+}
+
+.messagephoto {
+  width: 25px;
+  height: 25px;
+  border: 1px solid black;
+  border-radius: 50%;
+  object-fit: cover;
 }
