--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,7 +3,7 @@
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
   data-chatroom-subscription-current-user-id-value="<%= current_user.id %>">
 
-  <h3><%= @chatroom.user_friend.friend.user.first_name.capitalize %></h3>
+  <h3 class="d-flex justify-content-between"><%= @chatroom.user_friend.friend.user.first_name.capitalize %></h3>
 
   <div class="messages" data-chatroom-subscription-target="messages">
    <% @chatroom.messages.each do |message| %>
@@ -25,4 +25,5 @@
   %>
   <%= f.submit "Send", class: "btn btn-primary mb-3 send" %>
 <% end %>
+
 </div>
