--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,14 @@
 <div id="message-<%= message.id %>">
   <small>
-    <strong><%= message.user.first_name %></strong>
+    <strong>
+    <% if message.user.photo.attached? %>
+        <%= cl_image_tag message.user.photo.key, class: "messagephoto"%>
+        <% else %>
+        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "messagephoto" %>
+      <% end %>
+    <%= message.user.first_name %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
   </small>
   <p><%= message.content %></p>
+
 </div>
