broadcast on all pages first commit

--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -26,3 +26,5 @@
   <%= link_to "ADD A FRIEND", find_friends_path, class: "button-green-shadow" %>
   </div>
 </div>
+
+<p class="d-none my-target"><%= session[:status] %></p>
