--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-
+<p class="d-none my-target"><%= session[:status] %></p>
 <div class="center" data-controller="activation-button">
     <div class="intro">
       <p>WALKING HOME WITH YOU</p>
