--- a/app/views/friends/find_friends.html.erb
+++ b/app/views/friends/find_friends.html.erb
@@ -1,10 +1,11 @@
 <div class="container px-0">
 <h3 class="pt-2 text-center mb-0 pb-0 ">FRIENDS</h3>
+
 </div>
 <div class="container">
 <div class="middle">
 <p>Search for a contact by phone number</p>
-<p class="text-info">Never add a contact you don't know or trust</p>
+<p class="text-info pb-2">Never add a contact you don't know or trust</p>
 <%= form_with url: find_friends_path, method: :get, class: "d-flex pb-3" do %>
   <%= text_field_tag :query,
     params[:query],
@@ -17,8 +18,15 @@
 <div class="users">
 <% @users.each do |user| %>
   <div class="names">
-
+   <div class="d-flex justify-content-between">
+  <% if user.photo.attached? %>
+        <%= cl_image_tag user.photo.key, class: "findpicture"%>
+        <% else %>
+        <%= image_tag "https://www.filosofie.nl/app/uploads//2020/06/camus-filosoof.jpg", class: "findpicture" %>
+      <% end %>
   <%= link_to user.first_name.upcase, friends_path(user: user.id), data: { turbo_method: :post } %>
+  <p><%= user.phone_number %></p>
+  </div>
   </div>
 <% end %>
 </div>
