--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -26,3 +26,5 @@
   <%= f.submit "Send", class: "btn btn-primary mb-3 send" %>
 <% end %>
 </div>
+
+<p class="d-none my-target"><%= session[:status] %></p>
