--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
       <div class="me-auto">
         <% if user_signed_in? %>
           <div class="nav-item dropdown">
-            <a class="nav-link text-danger" href="#" data-bs-toggle="dropdown">
+            <a class="nav-link text-black" href="#" data-bs-toggle="dropdown">
 
              <%= current_user.first_name.upcase%>
             </a>
